[package]
name = "labyrinth-rs"
version = "0.1.0"
authors = ["Aldrich Suratos <cyurio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "labyrinth_rs"
path = "src/lib.rs"

[[bin]]
name = "labyrinth-bin"
path = "src/bin/bin.rs"

[dependencies]
