[package]
name = "labyrinth_map"
version = "0.1.0"
authors = ["Aldrich Suratos <cyurio@gmail.com>"]
edition = "2018"
description = ""
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tools = ["bracket-lib", "serialize", "deserialize"]
serialize = []
deserialize = []

[dependencies]
ron = "*"
serde = {version = "*", features = ["derive"]}
bracket-geometry = {version = "*", features = ["serde"]}
bracket-pathfinding = "*"
bracket-lib = {version = "*", features = ["serde"], optional = true}

[[bin]]
name = "editor"
path = "src/tools/editor.rs"
required-features = ["tools"]