[package]
name = "labyrinth_map"
version = "0.1.0"
authors = ["Aldrich Suratos <cyurio@gmail.com>"]
edition = "2018"
description = ""
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tools = ["bracket-lib", "serialization"]
serialization = ["serde", "ron"]

[dependencies]
ron = {version = "*", optional = true}
serde = {version = "*", features = ["derive"], optional = true}
bracket-lib = {version = "*", features = ["serde"], optional = true}
bracket-geometry = {version = "*", features = ["serde"]}
bracket-pathfinding = "*"

[[example]]
name = "pathfinding"
required-features = ["serialization"]

[[bin]]
name = "editor"
path = "src/tools/editor.rs"
required-features = ["serialization"]